# Include timer library
add_subdirectory(timer)

# Add RGB library
add_subdirectory(rgb)

# Add I2C library
add_subdirectory(i2c)

# Add MPU6050 library
add_subdirectory(mpu6050)

# Add Button library
add_subdirectory(button)

# Add UART library
add_subdirectory(uart)

# Add MCU library
add_subdirectory(mcu)

# Add Utils library
add_subdirectory(utils)
